@@ -3659,7 +3659,7 @@ public class Chunk {
 	}
 
 	/**
-	 * Renders an Ender Portal block.
+	 * Renders an End Portal block.
 	 * 
 	 * @param textureId
 	 * @param xxx
@@ -3668,7 +3668,7 @@ public class Chunk {
 	 * @param blockOffset
 	 * @param blockId
 	 */
-	public void renderEnderPortal(int textureId, int xxx, int yyy, int zzz) {
+	public void renderEndPortal(int textureId, int xxx, int yyy, int zzz) {
 		float x = xxx + this.x*16;
 		float z = zzz + this.z*16;
 		float y = yyy;
@@ -3677,7 +3677,7 @@ public class Chunk {
 	}
 
 	/**
-	 * Renders an Ender Portal Frame block.
+	 * Renders an End Portal Frame block.
 	 * 
 	 * @param textureId
 	 * @param xxx
@@ -3686,7 +3686,7 @@ public class Chunk {
 	 * @param blockOffset
 	 * @param blockId
 	 */
-	public void renderEnderPortalFrame(int textureId, int xxx, int yyy, int zzz, int blockOffset, BlockType block, int tex_offset) {
+	public void renderEndPortalFrame(int textureId, int xxx, int yyy, int zzz, int blockOffset, BlockType block, int tex_offset) {
 		float x = xxx + this.x*16;
 		float z = zzz + this.z*16;
 		float y = yyy;
@@ -4419,11 +4419,11 @@ public class Chunk {
 								case GLASS:
 									renderSemisolid(textureId,x,y,z,blockOffset,t);
 									break;
-								case ENDER_PORTAL:
-									renderEnderPortal(textureId,x,y,z);
+								case END_PORTAL:
+									renderEndPortal(textureId,x,y,z);
 									break;
-								case ENDER_PORTAL_FRAME:
-									renderEnderPortalFrame(textureId,x,y,z,blockOffset,block,tex_offset);
+								case END_PORTAL_FRAME:
+									renderEndPortalFrame(textureId,x,y,z,blockOffset,block,tex_offset);
 									break;
 
 								case NORMAL:
